<resources>
    <string name="app_name">Namescode</string>

    <string name="enter_user_name">Kullanıcı Adınızı Giriniz</string>
    <string name="button_text_login">Giriş Yap</string>
    <string name="button_text_create_room">Oda Oluştur</string>
    <string name="et_enter_room_name">Oda adı giriniz</string>
    <string name="card_image_content_desc">Card Image</string>
    <string name="spy">Casus(lar)</string>
    <string name="join">Katıl</string>
    <string name="narrator">Anlatıcı</string>
    <string name="type_clue">İpucu giriniz</string>
    <string name="give_clue_button">İpucu Verin</string>
    <string name="clue">İpucu</string>
    <string name="end_guessing">Tahmini Bitir</string>
    <string name="blue_team_won">Oyun sona erdi. Mavi takım kazandı.</string>
    <string name="red_team_won">Oyun sona erdi. Kırmızı takım kazandı.</string>
    <string name="turn_red_narrator">Kırmızı takımın anlatıcısı için ipucu verme zamanı</string>
    <string name="turn_blue_narrator">Mavi takımın anlatıcısı için ipucu verme zamanı</string>
    <string name="turn_red_spy">Kırmızı takımın spyları için tahmin yapma zamanı</string>
    <string name="turn_blue_spy">Mavi takımın spyları için tahmin yapma zamanı</string>
    <string name="toast_enter_username">Lütfen geçerli bir kullanıcı adı giriniz</string>
    <string name="create_game_room">Oyun odası oluştur</string>
    <string name="create">Oluştur</string>
    <string name="cancel">İptal Et</string>
    <string name="checked_image">checked Image</string>
    <string name="info_text_game_over">Oyun sona erdi.</string>
    <string name="title_login">Giriş Yapınız</string>
    <string name="title_select_game_room">Oda Seçiniz</string>
    <string name="report_error">Hata bildir</string>
    <string name="guessing_ended">" %1$s tahmini sonlandırdı."</string>
    <string name="enter_room_title">" %1$s numaralı odaya giriş yap."</string>
    <string name="clue_given">" %1$s ipucunu verdi: %2$s #%3$s"</string>
    <string name="red_narrator_names">" %1$s %2$s"</string>
    <string name="blue_narrator_names">" %1$s %2$s"</string>
    <string name="red_spy_names">" %1$s %2$s"</string>
    <string name="blue_spy_names">" %1$s %2$s"</string>
    <string name="enter_password">Şifre giriniz</string>
    <string name="password">Şifre:</string>
    <string name="room_name">Oda Adı:</string>
    <string name="redRemainingCardNumber">9</string>
    <string name="blueRemainingCardNumber">8</string>
    <string name="welcome_text">Namescode\'a Hoşgeldiniz</string>
    <string name="username_helper_text">Oyunda bu isimle görüntüleneceksin.</string>
    <string name="choose_role_to_join_game">Oyuna katılmak için bir rol seçmelisin</string>
    <string name="report">BİLDİR</string>
    <string name="please_enter_password">Lütfen şifre giriniz</string>
    <string name="wrong_password">Şifreyi yanlış girdiniz. Lüften doğru odaya girdiğinizden emin olunuz ve şifreyi tekrar giriniz.</string>
    <string name="namescode_header">namescode Header</string>
    <string name="please_enter_error">Karşılaştığınız problemi belirtiniz</string>
    <string name="how_to_play">Nasıl oynanır:</string>
    <string name="rule_1">1. OYNA butonuna tıklayın.</string>
    <string name="rule_2">2. Kullanıcı adınızı girin.</string>
    <string name="rule_3">3. GİRİŞ YAP butonuna tıklayın.</string>
    <string name="rule_4">4. Oda listesinden bir oda seçerek arkadaşlarınızın oluşturduğu bir odaya katılın veya ODA OLUŞTUR butonuna tıklayarak kendi odanızı oluşturun.</string>
    <string name="rule_5">5. Rolünüzü seçerek oyuna katılın.</string>
    <string name="rule_6">6. Oyuna, anlatması gereken kart sayısı fazla olan takım başlar.</string>
    <string name="rule_7">7. Sırası gelen anlatıcı kendi kelimelerine göre; bir ipucu yazar ve yazdığı ipucuyla anlatmak istediği kart sayısını seçip İPUCU VERİN butonuna tıklar.</string>
    <string name="rule_8">8. Sırası gelen spylar, anlatıcısının verdiği ipucu ve kelime sayısına göre, anlatıcılarının anlatmak istediği kelimeleri tahmin edip ardından ortaklaşa bir karar vererek doğru olduğunu düşündükleri kartlara tıklarlar.</string>
    <string name="rule_9">9. Bilmesi gereken kart sayısı 0 olan oyunu kazanır.</string>
    <string name="rule_10">10. Oyun 4+ kişi ile oynanır.</string>
    <string name="play">OYNA</string>
    <string name="check_if_want_to_exit">Çıkmak istediğinize emin misiniz?</string>
    <string name="log_out">Çıkış yap</string>
    <string name="stay">Odada kal</string>
    <string name="player_clicked_red_card">%1$s tıkladı: %2$s(Kırmızı)</string>
    <string name="player_clicked_blue_card">%1$s tıkladı: %2$s(Mavi)</string>
    <string name="player_clicked_white_card">%1$s tıkladı: %2$s(Beyaz)</string>
    <string name="player_clicked_black_card">%1$s tıkladı: %2$s(Siyah)</string>
    <string name="invite_friend_information">Bilgilendirme</string>
    <string name="information">Bilgilendirme</string>
    <string name="invite_friend_info">Oda isminin yanında yazan numara (#numara) oda numarasıdır. Arkadaşlarınız bulunduğunuz odaya bu numara ve oda oluşturulurken girilen şifre ile katılabilir.\nİyi eğlenceler</string>
    <string name="advice_word">Kelime Öner</string>
    <string name="your_word">Kelimeniz:</string>
    <string name="enter_word">Kelime giriniz</string>
    <string name="cancel_room_create">İPTAL ET</string>
    <string name="send">Gönder</string>
    <string name="reset_game">Oyunu Sıfırla</string>
    <string name="reset_game_tv">Oyunu sıfırlamak istediğinize emin misiniz?</string>
    <string name="reset">SIFIRLA</string>
    <string name="cancel_reset_game">VAZGEÇ</string>
</resources>