<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color"
    android:id="@+id/openingLayout"
    tools:context=".ui.OpeningFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragmentOpeningToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/howtoPlayLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/corner_radius_layout_how_to_play"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton">

        <TextView
            android:id="@+id/howToPlayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/how_to_play"
            android:textColor="#9E5A5C"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/rule1Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rule_1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/rule4Text"
            app:layout_constraintStart_toStartOf="@+id/rule2Text"
            app:layout_constraintTop_toBottomOf="@+id/howToPlayText" />

        <TextView
            android:id="@+id/rule2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_2"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/howToPlayText"
            app:layout_constraintTop_toBottomOf="@+id/rule1Text" />

        <TextView
            android:id="@+id/rule3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_3"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/rule2Text"
            app:layout_constraintTop_toBottomOf="@+id/rule2Text" />

        <TextView
            android:id="@+id/rule4Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_4"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rule3Text"
            app:layout_constraintTop_toBottomOf="@+id/rule3Text" />

        <TextView
            android:id="@+id/rule5Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_5"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/rule4Text"
            app:layout_constraintTop_toBottomOf="@+id/rule4Text" />

        <TextView
            android:id="@+id/rule6Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_6"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/rule4Text"
            app:layout_constraintStart_toStartOf="@+id/rule5Text"
            app:layout_constraintTop_toBottomOf="@+id/rule5Text" />

        <TextView
            android:id="@+id/rule7Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_7"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/rule6Text"
            app:layout_constraintStart_toStartOf="@+id/rule6Text"
            app:layout_constraintTop_toBottomOf="@+id/rule6Text" />

        <TextView
            android:id="@+id/rule8Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_8"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/rule7Text"
            app:layout_constraintStart_toStartOf="@+id/rule7Text"
            app:layout_constraintTop_toBottomOf="@+id/rule7Text" />

        <TextView
            android:id="@+id/rule9Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_9"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/rule8Text"
            app:layout_constraintStart_toStartOf="@+id/rule8Text"
            app:layout_constraintTop_toBottomOf="@+id/rule8Text" />

        <TextView
            android:id="@+id/rule10Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_10"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/rule9Text"
            app:layout_constraintStart_toStartOf="@+id/rule9Text"
            app:layout_constraintTop_toBottomOf="@+id/rule9Text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentOpeningToolbar"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <ImageView
            android:id="@+id/namescodeHeader"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/namescode_header"
            android:src="@drawable/names_code_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/default_button_color"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="34dp"
        android:paddingRight="34dp"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/howtoPlayLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameNameLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>